Added AOC-2022 and the first part of day 01.

--- a/2021.md
+++ b/2021.md
@@ -1,10 +1,7 @@
-# advent-of-code
+# advent-of-code 2021
 
 ## Introduction
 Advent of Code is an Advent calendar of small programming puzzles for a variety of skill sets and skill levels that can be solved in any programming language you like. I chose **Python** version 3 as my weapon of choice.
-
-## Advent of Code 2021
-Below are my direct link to python code for 2021
 
 ## Notes for each Days
 
